Avoid the --illegal-access=deny warning with Java 27